<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginBottom="20dp"
    android:scrollbars="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/aboutUsTitle"
                android:text="@string/versao"
                />
            <TextView
                style="@style/aboutUsTitle"
                android:text="@string/visaoGeral"
                />
            <TextView
                style="@style/aboutUsDesc"
                android:text="@string/visaoGeralDesc1"
                />
            <TextView
                style="@style/aboutUsDesc"
                android:text="@string/visaoGeralDesc2"
                />
            <TextView
                style="@style/aboutUsTitle"
                android:text="@string/padroesMarcadores"
                />
            <TextView
                style="@style/aboutUsDesc"
                android:text="@string/padroesMarcadores1"
                />
            <TextView
                style="@style/aboutUsDesc"
                android:text="@string/padroesMarcadores2"
                />
            <TextView
                style="@style/aboutUsTitle"
                android:text="@string/desenv"
                />
            <TextView
                style="@style/aboutUsDesc"
                android:text="@string/dev1"
                />
            <TextView
                style="@style/aboutUsDesc"
                android:text="@string/dev2"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>