<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/solar_system" />

    <TextView
        style="@style/powered"
        android:text="@string/powered"
        />
    <TextView
        style="@style/dev"
        android:text="@string/dev1"
        />
    <TextView
        style="@style/dev"
        android:text="@string/dev2"
        />

</LinearLayout>